first draft of new run scripts